nginx-analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-analytics-service
spec:
  selector:
    app:  nginx-analytics
  type:  ClusterIP
  ports:
  - port:  8081
    targetPort:  80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-analytics-deployment
  labels:
    app: nginx-analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-analytics
  template:
    metadata:
      labels:
        app: nginx-analytics
    spec:
      containers:
      - name: nginx-analytics
        image: nginx:1.14.2
        ports:
        - containerPort: 80
