nginx-shop.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-shop-service
spec:
  selector:
    app:  nginx-shop
  type:  ClusterIP
  ports:
  - port:  8080
    targetPort:  80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-shop-deployment
  labels:
    app: nginx-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-shop
  template:
    metadata:
      labels:
        app: nginx-shop
    spec:
      containers:
      - name: nginx-shop
        image: nginx:1.14.2
        ports:
        - containerPort: 80
