nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - hosts:
      - "*.example.com"
    secretName: nginx-tls
  rules:
  - host: "shop.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-shop-service
            port:
              number: 8080
  - host: "analytics.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-analytics-service
            port:
              number: 8081
